# mymsg

./: .clang-format  CMakeLists.txt  cfg_client.json  cfg_server.json  client.cpp  doxygen.cfg  myconsole.h  mymsg_mysql_query.h  mymsg_tools.h  readme.md  server.cpp
SQLAPI/: ReadMe.txt
SQLAPI/include/: SQLAPI.h  myAPI.h  pgAPI.h  sybAPI.h
SQLAPI/samples/: Makefile.mvc  Scrollable_Cursor.cpp  bugtest.cpp  sqltest.cpp  sqltest_mvc.bat
html/: annotated.html  classAcceptor-members.html  classAcceptor.html  classAsyncTCPClient-members.html  classAsyncTCPClient.html  classServer-members.html  classServer.html  classService-members.html  classService.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  md_readme.html  mymsg__tools_8h_source.html  pages.html  structSession-members.html  structSession.html  structSessions-members.html  structSessions.html  structTracker-members.html  structTracker.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js
logs/: client_log.txt
msgDB/: MsgDB_mysql_create.sql
pictures/: Architecture.xml
